test/parser/Queries/syntax_errors/fail_K-ForExprWithout-21.xq
(:***************** where *******foo******* eq ********* let **** $ ******** ne  where **:
(: Test: K-ForExprWithout-21   let   let       for                for       ne   :)
( Writtenby: Frans Englich   let   where      let         for foo          foo  ne   $  :)
(: Date: 2006-10-05T18:29:37+02:00               ne         :)
(: Purpose: A for variable binding to thefoo empty sequence, combined with value comparison. )
(:*** $ * eq ** for ************************* where ******* where ******** $ ******* eq *:)
empty(( $ for $var in () return for  1) eq where  1